--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-
-
+<nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo center">
+        Domino's Pizza
+      </a>
+    </div>
+  </nav>
 
 <router-outlet></router-outlet>
-<app-pizza-list></app-pizza-list>
