--- a/src/app/Pizzas/details-pizza/details-pizza.component.html
+++ b/src/app/Pizzas/details-pizza/details-pizza.component.html
@@ -1,32 +1,49 @@
 <!-- details-pizza.component.html -->
 
-
-
-<div *ngIf="pizzaToDisplay; else pizzaNotFound" class='container'>
-  <div class="row">
-    <div class="col s12 m6">
-      <div class="card horizontal">
+<div *ngIf="pizzaToDisplay">
+    <div class="col s12 m8 offset-m2">
+      <h2 class="header center">{{ pizzaToDisplay.name }}</h2>
+      <div class="card horizontal hoverable">
         <div class="card-image">
-          <img [src]="pizzaToDisplay.picture" alt="{{ pizzaToDisplay.name }}">
+          <img [src]="pizzaToDisplay.picture">
         </div>
         <div class="card-stacked">
           <div class="card-content">
-            <h2>{{ pizzaToDisplay.name }}</h2>
-            <p><strong>NutriScore:</strong> {{ pizzaToDisplay.nutriScore }}</p>
-            <p><strong>Ingrédients:</strong></p>
-            <ul>
-              <li *ngFor="let ingredient of pizzaToDisplay.compositions" class="{{ingredient | pizaIngredientColor}}">
-                {{ ingredient }}
-              </li>
-            </ul>
-          
+            
+            <table class="bordered striped">
+              <tbody>
+                <tr>
+                  <td>Nom</td>
+                  <td><strong>{{ pizzaToDisplay.name }}</strong></td>
+                </tr>
+                <tr>
+                  <td>Nutriscore</td>
+                  <td><strong>{{ pizzaToDisplay.nutriScore }}</strong></td>
+                </tr>
+                <tr>
+                  <td>Ingrédients</td>
+                  <td>
+                    <span *ngFor="let ingredient of pizzaToDisplay.compositions" class="{{ingredient | pizaIngredientColor}}">
+                      {{ingredient }}
+                    </span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Date de création</td>
+                  <td><em>{{ pizzaToDisplay.created | date:"dd/MM/yyyy" }}</em></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+  
+          <div class="card-action left">
+            <a type="button" class="waves-effect waves-light btn margin-button" (click)="goBack()">Retour</a>
+            <a type="button" class="waves-effect waves-light btn margin-button" (click)="editerPizza(pizzaToDisplay)">Editer</a>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-
-<ng-template #pizzaNotFound>
-  <p class='center'>La pizza avec l'identifiant spécifié n'existe pas.</p>
-</ng-template>
+  
+  <h4 *ngIf="!pizzaToDisplay" class="center">Aucune pizza à afficher !</h4>
+  
